@@ -20,6 +20,7 @@
 #include "CSpectrum2DmW.h"
 #include <Event.h>
 #include <RangeError.h>
+#include <TH2S.h>
 
 #ifdef HAVE_STD_NAMESPACE
 using namespace std;
@@ -49,9 +50,16 @@ CSpectrum2DmW::CSpectrum2DmW(std::string              name,
 			     std::vector<CParameter>& parameters,
 			     UInt_t                   xscale,
 			     UInt_t                   yscale) :
-  CSpectrum2Dm(name, id, parameters, xscale, yscale)
+  CSpectrum2Dm(name, id, parameters, xscale + 2 , yscale + 2)
 {
+  m_pRootSpectrum = new TH2S(
+    name.c_str(), name.c_str(),
+    xscale, 0.0, static_cast<Double_t>(xscale),
+    yscale, 0.0, static_cast<Double_t>(yscale)
+  );
+  m_pRootSpectrum->Adopt(0, nullptr);
   CreateChannels();
+  setStorageType(keWord);
 }
 
 /*!
@@ -79,14 +87,25 @@ CSpectrum2DmW::CSpectrum2DmW(std::string              name,
 			     UInt_t                   ychans,
 			     Float_t  xlow, Float_t   xhigh,
 			     Float_t  ylow, Float_t   yhigh) :
-  CSpectrum2Dm(name, id, parameters, xchans, ychans,
+  CSpectrum2Dm(name, id, parameters, xchans + 2, ychans + 2,
 	       xlow, xhigh, ylow, yhigh)
 {
+  m_pRootSpectrum = new TH2S(
+    name.c_str(), name.c_str(),
+    xchans, static_cast<Double_t>(xlow),  static_cast<Double_t>(xhigh),
+    ychans, static_cast<Double_t>(ylow),  static_cast<Double_t>(yhigh)
+  );
+  m_pRootSpectrum->Adopt(0, nullptr);
   CreateChannels();
+  setStorageType(keWord);
 }
 
 
-CSpectrum2DmW::~CSpectrum2DmW() {}
+CSpectrum2DmW::~CSpectrum2DmW()
+{
+  m_pRootSpectrum->fArray = nullptr;
+  delete m_pRootSpectrum;
+}
 
 
 ///////////////////////////////////////////////////////////////////
@@ -111,9 +130,9 @@ CSpectrum2DmW::~CSpectrum2DmW() {}
 ULong_t
 CSpectrum2DmW::operator[](const UInt_t* pIndices) const
 {
-  UShort_t* p      = (UShort_t*)getStorage();
-  UInt_t  x      = pIndices[0];
-  UInt_t  y      = pIndices[1];
+  
+  Int_t  x      = pIndices[0];
+  Int_t  y      = pIndices[1];
   if (x >= Dimension(0)) {
     throw CRangeError(0, Dimension(0) - 1, x,
 		      string("Indexing 2m spectrum (x)"));
@@ -122,7 +141,9 @@ CSpectrum2DmW::operator[](const UInt_t* pIndices) const
     throw CRangeError(0, Dimension(1) - 1, y,
 		      string("Indexing 2m Spectrum (y)"));
   }
-  return (ULong_t)(p[coordsToIndex(x,y)]);
+  return static_cast<ULong_t>(m_pRootSpectrum->GetBinContent(
+    m_pRootSpectrum->GetBin(x,y)
+  ));
 }
 
 /*!
@@ -135,9 +156,9 @@ CSpectrum2DmW::operator[](const UInt_t* pIndices) const
 void
 CSpectrum2DmW::set(const UInt_t* pIndices, ULong_t nValue)
 {
-  UShort_t* p      = (UShort_t*)getStorage();
-  UInt_t x     = pIndices[0];
-  UInt_t y     = pIndices[1];
+  
+  Int_t x     = pIndices[0];
+  Int_t y     = pIndices[1];
 
   if (x >= Dimension(0)) {
     throw CRangeError(0, Dimension(0) - 1, x,
@@ -148,8 +169,9 @@ CSpectrum2DmW::set(const UInt_t* pIndices, ULong_t nValue)
 		      string("Indexing 2m Spectrum (y)"));
   }
 
-  p[coordsToIndex(x,y)] = (UShort_t)nValue;
-
+  m_pRootSpectrum->SetBinContent(
+    m_pRootSpectrum->GetBin(x,y), static_cast<Double_t>(nValue)
+  );
 }
 
 /*!
@@ -205,15 +227,30 @@ CSpectrum2DmW::IncPair(const CEvent& rEvent, UInt_t nx, UInt_t ny, int i)
   }
   // The parameters must both be in range for the spectrum after scaling:
 
-  Float_t x = const_cast<CEvent&>(rEvent)[nx];
-  Float_t y = const_cast<CEvent&>(rEvent)[ny];
-
-  Int_t ix = (Int_t)m_axisMappings[i].MappedParameterToAxis(x);
-  Int_t iy = (Int_t)m_axisMappings[i+1].MappedParameterToAxis(y);
-  
-  if(canIncrement(ix, iy, m_xChannels, m_yChannels)) {
-    UShort_t* p = static_cast<UShort_t*>(getStorage());
-    p[coordsToIndex(ix, iy)]++;  
-  }
+  Double_t x = const_cast<CEvent&>(rEvent)[nx];
+  Double_t y = const_cast<CEvent&>(rEvent)[ny];
+  m_pRootSpectrum->Fill(x,y);
     
+}
+/**
+ * setStorage
+ *    Tell the root histogram to use a different block of storage for its
+ *    channels.
+ * @param pStorage - pointer to the new storage to use.
+ */
+void
+CSpectrum2DmW::setStorage(Address_t pStorage)
+{
+  m_pRootSpectrum->fArray = reinterpret_cast<Short_t*>(pStorage);
+  m_pRootSpectrum->fN     = Dimension(0) * Dimension(1);
+}
+/**
+ * StorageNeeded
+ *
+ * @return Size_t - number of bytes of spectrum storage needed for this spectrum.
+ */
+Size_t
+CSpectrum2DmW::StorageNeeded() const
+{
+  return static_cast<Size_t>(Dimension(0) * Dimension(1) * sizeof(Short_t));
 }
